@@ -83,6 +83,7 @@ Verilator 5.035 devel
 * Fix LATCH warning for automatic variables (#5918). [Yutetsu TAKATSUKASA]
 * Fix %% on elaboration severity tasks (#5922). [Ethan Sifferman]
 * Fix port default values with `--coverage-line` creating `0=0` (#5920). [Drew Ranck]
+* Fix vlSelf error on fork repeats (#5927). [Drew Ranck]
 * Fix missing C++ regeneration when Verilog files are updated (#5934). [Zhouyi Shen]
 * Fix stream expressions (#5938). [Ryszard Rozak, Antmicro Ltd.]
 * Fix packed selection using over 32-bit index (#5957).
